--- a/styles.css
+++ b/styles.css
@@ -156,13 +156,13 @@ body {
 
 .collected-words {
     position: fixed;
-    top: 20px;
+    top: 100px;
     left: 0;
     right: 0;
     display: flex;
     justify-content: center;
     margin: auto;
-    gap: 20px;
+    gap: 60px;
     z-index: 2;
 }
 
@@ -269,4 +269,49 @@ body {
 
 .hidden {
     display: none;
+}
+
+.timer-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.timer-text {
+    color: black;
+    font-family: "Kanit", serif;
+    font-weight: 800;
+    font-style: bold;
+    font-size: 3rem;
+    min-width: 50px;
+    text-align: right;
+}
+
+.timer-bar {
+    flex-grow: 1;
+    height: 100%;
+    border-radius: 30px;
+    background: linear-gradient(to right, #ff0000, #ffdd00);
+    border: 6px solid #ffdd00;
+    transition: width 0.1s linear;
+}
+
+.timer-text.warning {
+    animation: blink 1s infinite;
+}
+
+.timer-bar.warning {
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0.5;
+    }
 }
