--- a/styles/base.css
+++ b/styles/base.css
@@ -7,6 +7,7 @@
 
 body {
     overflow: hidden;
+    background: red url('../img/flower.png');
     font-family: "LXGW WenKai Mono TC", serif;
     font-weight: 400;
     font-style: normal;
