--- a/styles/components/timer.css
+++ b/styles/components/timer.css
@@ -12,6 +12,13 @@
     z-index: 100;
 }
 
+/* 手機版樣式調整 */
+@media screen and (max-width: 768px) {
+    .timer-container {
+        top: 5%;
+    }
+}
+
 .timer-text {
     font-family: "Kanit", serif;
     font-size: 3rem;
