--- a/styles/components/score.css
+++ b/styles/components/score.css
@@ -22,6 +22,12 @@
     line-height: .7;
 }
 
+@media (max-width: 390px) {
+    .current-score {
+        font-size: 4rem;
+    }
+}
+
 .score-value {
     font-size: 5rem;
     font-weight: 900;
@@ -45,6 +51,7 @@
     font-weight: bold;
     opacity: 0;
     transition: opacity 0.3s ease;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .combo-indicator.active {
