--- a/styles/components/game.css
+++ b/styles/components/game.css
@@ -80,10 +80,10 @@
 
 #startButton {
     font-size: 1.5em;
-    background-color: #ff0000;
+    background-color: #b1002c;
     color: white;
     border: 4px solid #ffdd00;
-    border-radius: 10px;
+    border-radius: 30px;
     cursor: pointer;
     transition: transform 0.3s ease;
 }
@@ -91,18 +91,20 @@
 .btn-style {
     padding: 6px 40px;
     font-size: 1.5em !important;
+    line-height: 1.2;
     background-color: #ff0000;
     color: white;
     border: 4px solid #ffdd00;
     border-radius: 10px;
     cursor: pointer;
+    box-shadow: -6px 9px 13px 0px #00000038
 }
 
 
 .remaining-times {
     font-size: 1.5em;
+    font-weight: bold;
     color: #fff;
-    margin: 6px 0px;
 }
 
 #startButton:hover {
@@ -125,6 +127,7 @@
 
 .game-buttons {
     display: flex;
+    align-items: center;
     gap: 30px;
 }
 
@@ -132,6 +135,7 @@
 @media (max-width: 768px) {
     .game-buttons {
         flex-direction: column;
+        align-items: center;
         gap: 10px;
     }
 }
@@ -139,6 +143,7 @@
 @media (max-width: 390px) {
     .game-buttons {
         flex-direction: column;
+        align-items: center;
     }
 }
 
