--- a/styles/components/score.css
+++ b/styles/components/score.css
@@ -28,15 +28,29 @@
     }
 }
 
-.score-value {
-    font-size: 5rem;
-    font-weight: 900;
-    font-family: "Kanit", sans-serif;
+
+.score-label-container {
     background: white;
     color: #f00;
     border: 4px solid orange;
     border-radius: 10px;
-    padding: 0 20px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
+
+.score-label-text{
+
+    font-size: 1.3rem;
+}
+
+.score-value {
+    font-size: 5rem;
+    font-weight: 900;
+    font-family: "Kanit", sans-serif;
+    line-height: 1;
 }
 
 .combo-indicator {
