--- a/styles/components/timer.css
+++ b/styles/components/timer.css
@@ -2,13 +2,14 @@
 .timer-container {
     position: fixed;
     right: 30px;
-    top: 16%;
+    box-shadow: 0 0 0 8px #ffbe00;
+    background: #ffe9dc;
+    top: 95px;
     transform: translateY(-50%);
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 26px;
-    border-radius: 15px;
+    width: 20px;
     z-index: 100;
 }
 
@@ -20,19 +21,21 @@
 }
 
 .timer-text {
+    position: absolute;
+    bottom: -30%;
+    line-height: 30px;
     font-family: "Kanit", serif;
     font-size: 3rem;
     font-weight: bold;
     color: #ff0000;
-    line-height: 30px;
     transition: color 0.3s ease;
 }
 
 .timer-bar {
-    width: 30px;
-    height: 200px;
+    width: 20px;
+    height: 150px;
     background: #ff2828;
-    border-radius: 5px;
+    border-radius: 0;
     transform-origin: bottom;
     transition: transform 0.3s linear, background-color 0.3s ease;
 }
