--- a/styles/components/modal.css
+++ b/styles/components/modal.css
@@ -179,7 +179,7 @@
 }
 
 .ranking-title {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     text-align: center;
     color: #333;
@@ -193,6 +193,7 @@
 }
 
 .tab-btn {
+    font-size: 1.3rem;
     padding: 8px 16px;
     border: none;
     background: #f0f0f0;
@@ -278,15 +279,15 @@
 
 /* 前三名的特殊樣式 */
 .ranking-item:nth-child(1) {
-    background: linear-gradient(to right, #ffd70033, #f8f8f8);
+    background: #ffd329;
 }
 
 .ranking-item:nth-child(2) {
-    background: linear-gradient(to right, #c0c0c033, #f8f8f8);
+    background: #ffd329;
 }
 
 .ranking-item:nth-child(3) {
-    background: linear-gradient(to right, #cd7f3233, #f8f8f8);
+    background: #ffd329;
 }
 
 @keyframes fadeIn {
@@ -384,6 +385,11 @@
 @media screen and (max-width: 768px) {
     .ranking-container {
          opacity: 0;
+    }
+
+    .ranking-popup.active.index-active>.ranking-container  {
+        opacity: 1;
+        display: block;
     }
 }
 
