Improve Game UX

--- a/styles/components/score.css
+++ b/styles/components/score.css
@@ -154,10 +154,7 @@
 
 .coins-limit-warning {
     color: #ff4444;
-    font-size: 0.8em;
-    position: absolute;
-    bottom: -18px;
-    left: 0;
+    font-size: 16px !important;
     width: 100%;
     text-align: center;
     display: none;
