--- a/styles/components/game.css
+++ b/styles/components/game.css
@@ -116,7 +116,6 @@
 @media screen and (max-width: 768px) {
     .game-logo {
         width: 90%;
-        margin-bottom: 20px;
     }
 
     .difficulty-select {
@@ -138,6 +137,7 @@
         flex-direction: column;
         align-items: center;
         gap: 10px;
+        transform: translateY(-60px);
     }
 }
 
