--- a/styles/components/virtual-joystick.css
+++ b/styles/components/virtual-joystick.css
@@ -1,6 +1,6 @@
 .virtual-joystick {
     position: absolute;
-    bottom: 50px;
+    bottom: 25%;
     left: 50%;
     transform: translateX(-50%);
     display: none;
@@ -28,12 +28,18 @@
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
     box-shadow: 0px 6px 8px #00000012;
+    transition: all 0.1s ease;
 }
 
-.joystick-btn.active {
-    background: rgba(255, 255, 255, 0.4);
+.joystick-btn:active {
+    background-color: rgba(255, 148, 8, 0.966);
     transform: scale(0.95);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
+
+    .joystick-btn:active .arrow {
+        border-color: rgba(0, 0, 0);
+    }
 
 .joystick-btn.up { grid-area: up; }
 .joystick-btn.down { grid-area: down; }
