--- a/styles/components/virtual-joystick.css
+++ b/styles/components/virtual-joystick.css
@@ -32,8 +32,8 @@
 }
 
 .joystick-btn:active {
-    background-color: rgba(255, 148, 8, 0.966);
-    transform: scale(0.95);
+    background-color: rgb(255, 0, 0);
+    transform: scale(1);
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
 
